# skyrimReLive

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
client/plugin/: CMakeLists.txt  README.md  SkyrimReLive.toml  vcpkg.json
client/plugin/src/: Cell.cpp  Cell.h  Combat.cpp  Combat.h  Commands.cpp  Commands.h  Config.cpp  Config.h  Ghost.cpp  Ghost.h  Net.cpp  Net.h  PCH.h  Plugin.cpp  Plugin.h  Socket.cpp  Socket.h  Zeus.cpp  Zeus.h  ZeusOverlay.cpp  ZeusOverlay.h
client/plugin/src/proto/v1/: lifecycle_generated.h  types_generated.h  world_generated.h
docs/: ARCHITECTURE.md  CHEATSHEET.md  DEV_RULES.md  FRIEND_QUICKSTART.md  HOST_SETUP.md  NEXUS_ARTICLE.bbcode  NEXUS_ARTICLE.md  NEXUS_DESCRIPTION.bbcode  NEXUS_DESCRIPTION.txt  PLAYER_SETUP.md  PLAYTEST_CHECKLIST.md  ROADMAP.md  TAILSCALE_HARDENING.md  TECH_DEBT.md  TESTING.md
docs/proposals/: 0000-template.md  0001-phase-1-replication.md  0002-phase-2-animation-combat.md  0003-phase-2.5-pitch-and-ranged.md  0004-phase-3-world-state.md  README.md
schemas/: README.md
schemas/v1/: lifecycle.fbs  types.fbs  world.fbs
server/: Cargo.toml  README.md  server.toml
server/src/: components.rs  config.rs  lib.rs  main.rs  wire.rs
server/src/proto/v1/: lifecycle_generated.rs  mod.rs  types_generated.rs  world_generated.rs
tools/: README.md  build-friend-bundle.ps1  build-friend-bundle.sh  friend-quickstart.ps1  friend-quickstart.sh  launch.ps1  launch.sh  regen-protos.sh  setup.ps1  setup.sh
tools/echo-client/: Cargo.toml  README.md
tools/echo-client/src/: main.rs
tools/friend-bundle/: INSTALL.bat  LAUNCH.bat  README.txt.template  UNINSTALL.bat
tools/friend-bundle/downloads/: PUT_DOWNLOADS_HERE.txt
tools/friend-bundle/files/: SkyrimReLive.toml.template
tools/friend-bundle/scripts/: install.ps1  launch.ps1  uninstall.ps1
