[package]
name = "skyrim-relive-server"
description = "SkyrimReLive authoritative server. Scales from co-op to MMO."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
bevy_ecs.workspace = true
flatbuffers.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
socket2.workspace = true
toml = { workspace = true, features = ["parse", "display"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
