[package]
name = "skyrim-relive-echo-client"
description = "Test client that sends one Hello packet and prints the Welcome reply."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
flatbuffers.workspace = true
tokio.workspace = true
anyhow.workspace = true
skyrim-relive-server = { path = "../../server" }
